Move php.ini settings to site.conf

--- a/site.conf
+++ b/site.conf
@@ -5,12 +5,15 @@ server {
   access_log /var/log/nginx/access.log;
   root /www;
 
+
   location ~ \.php$ {
       try_files $uri =404;
       fastcgi_split_path_info ^(.+\.php)(/.+)$;
       fastcgi_pass php:9000;
       fastcgi_index index.php;
       include fastcgi_params;
+      fastcgi_param PHP_VALUE error_reporting=E_ALL;
+      fastcgi_param PHP_VALUE "upload_max_filesize=64M;\n post_max_size = 64M;\n max_file_uploads = 100;\n error_reporting=E_ALL;\n max_execution_time = 120;\n";
       fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
       fastcgi_param PATH_INFO $fastcgi_path_info;
   }
