--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@
 .DS_Store
 www/albums/*
 www/albums-processed/*
+www/app/config.php
 !www/albums/2020-06-01-Summer-Hikes
 !www/albums/.gitkeep
 !www/albums-processed/.gitkeep
